refactor: 리스트를 카피해서 반환하던 방식에서 읽기 전용 리스트를 반환하도록 수정